[package]
name = "coha-filter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
csv = "1.3.0"
iconv = "0.1.1"
itertools = "0.13.0"
log = "0.4.21"
rayon = "1.10.0"
regex = "1.10.4"
rustc-hash = "1.1.0"

[dev-dependencies]
clap = { version = "4.5.4", features = ["derive"] }
clap-verbosity-flag = "2.2.0"
env_logger = "0.11.3"
