[package]
name = "coha-filter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
csv = "1.3.1"
itertools = "0.13.0"
log = "0.4.22"
rayon = "1.10.0"
regex = "1.11.1"
rustc-hash = "2.1.0"

[dev-dependencies]
clap = { version = "4.5.23", features = ["derive"] }
clap-verbosity-flag = "3.0.2"
env_logger = "0.11.6"
